k8s-api-server/service.yaml
kind: Service
apiVersion: v1
metadata:
 name: kubernetes 
spec:
 type: NodePort
 ports:
 - port: 6443
   targetPort: 6443
   name: "6443"
