k8s-api-server/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-api-server 
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: k8s.sudojoss.com
    http:
      paths:
        - path: /
          backend:
            serviceName: kubernetes 
            servicePort: 443
  tls: 
  - secretName: sudojoss-tls
    hosts:
    - k8s.sudojoss.com
